Moved mr-jar files into its project folders.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>