@@ -179,7 +179,7 @@
                     </execution>
                     <execution>
                         <id>copy-lib</id>
-                        <phase>process-test-sources</phase>
+                        <phase>validate</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -191,7 +191,7 @@
                     </execution>
                     <execution>
                         <id>copy-ant</id>
-                        <phase>process-test-sources</phase>
+                        <phase>validate</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -222,6 +222,62 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant</artifactId>
+                        <version>${ant.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>compile-java9</id>
+                        <phase>compile</phase>
+                        <configuration>
+                            <tasks>
+                                <mkdir dir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}" />
+                                <javac srcdir="${mrjar.sourceDirectory}"
+                                       destdir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}"
+                                       classpath="${project.build.outputDirectory}"
+                                       includeantruntime="false"
+                                       source="${upper.java.level}"
+                                       target="${upper.java.level}">
+                                    <compilerarg line="--upgrade-module-path ${project.build.directory}/lib/api/jaxb-api.jar" />
+                                    <compilerarg line="--add-modules java.xml.ws" />
+                                    <classpath>
+                                        <fileset dir="${project.build.directory}/lib">
+                                            <include name="**/*.jar"/>
+                                        </fileset>
+
+                                        <fileset dir="${project.build.directory}/lib/ant">
+                                            <include name="**/*.jar"/>
+                                        </fileset>
+                                        <pathelement location="${project.build.directory}/classes" />
+                                    </classpath>
+                                </javac>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>update-source-jar</id>
+                        <phase>verify</phase>
+                        <configuration>
+                            <tasks>
+                                <jar destfile="${project.build.directory}/jaxb-xjc-${project.version}-sources.jar" update="true">
+                                    <zipfileset prefix="META-INF/versions" dir="${mrjar.sourceDirectory}"/>
+                                </jar>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <!--
+                    TODO endorse for JDK9
                 <executions>
                     <execution>
                         <id>EBCDIC-test</id>
@@ -253,11 +309,11 @@
                                     <jvmarg line="-Dnet.sourceforge.cobertura.datafile=${net.sourceforge.cobertura.datafile}"/>
                                 </wsimport>
                             </target>
-                            <!-- TODO JDK9 endorse for -->
+                            &lt;!&ndash; TODO JDK9 endorse for &ndash;&gt;
                             <skip>true</skip>
                         </configuration>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
             <!--
             <plugin>
@@ -426,6 +482,19 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jar-plugin</artifactId>
                         <executions>
+                            <execution>
+                                <id>default-jar</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <archive>
+                                        <manifestEntries>
+                                            <Multi-Release>true</Multi-Release>
+                                        </manifestEntries>
+                                    </archive>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>package-test-jar</id>
                                 <goals>
